Project/phase2/test/test_12012937_5.out
Error type 1 at Line 10: undefined variable: A
Error type 5 at Line 11: unmatching type on both sides of assignment
