Project/phase2/test/test_12012937_5.spl
struct A{
	int apex;
	int my;
	float eyes;

};
int cpp()
{
	struct A Pheobe;
	struct Pheobe A;
	Pheobe.eyes=Pheobe.my;
}
